// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`match() should fail  1`] = `
Object {
  "children": null,
  "message": "Value should match regexp: /test/",
  "path": "",
}
`;

exports[`match() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;
